# plutus

./: .dockerignore  .env.example  .env.homelab.example  .env.saas.example  .gitignore  CLAUDE.md  Dockerfile  README.md  RETIRE.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: test.yml
app/: __init__.py  argus_client.py  async_io.py  audit.py  audit_retention.py  auth.py  auth_context.py  billing.py  bundle_editor.py  catalog.py  config.py  db.py  db_pg.py  dionysus_client.py  gallery_media.py  health.py  homelab.py  ingest.py  lab.py  lab_whcc.py  main.py  metering.py  metrics.py  mise_callback.py  mise_client.py  mise_hook.py  notifications.py  offer_schema.py  order_tracking.py  order_views.py  orders.py  pitch.py  rate_limit.py  recommend.py  redis_client.py  saas.py  sell.py  service.py  service_tokens.py  signup.py  (+9 more)
docs/: PHASE-0.md  architecture.md
ops/: cloudflare-tunnel.example.yml  dionysus-homelab-user.service  minio-compose.yml  plutus-cloudflared-user.service  plutus-homelab-user.service  plutus-pg-dev.service  plutus-saas-user.service  plutus-user.service
scripts/: ci-docker.sh  ci-postgres.sh  ci-smoke.sh  deploy-fly.sh  deploy-homelab-saas.sh  deploy-homelab.sh  dogfood-claim-invite.sh  dogfood-create-tenant.sh  dogfood-dionysus-saas.sh  dogfood-flow-gallery.sh  dogfood-homelab-money.sh  dogfood-lab-fulfillment.sh  dogfood-mise-saas.sh  dogfood-mnemosyne-link.sh  dogfood-money-loop.sh  dogfood-notifications.sh  dogfood-phase5.sh  dogfood-phase6.sh  dogfood-public-url.sh  dogfood-s3.sh  dogfood-session.sh  dogfood-smtp.sh  dogfood-stripe-real.sh  dogfood-subscription.sh  dogfood-suite-loop.sh  dogfood-wait-batch.sh  dogfood-welcome-email.sh  dogfood-whcc.sh  dogfood_suite_loop.py  hardening-smoke.sh  install-homelab-service.sh  install-saas-service.sh  install-sync-mise-cron.sh  install-user-service.sh  notify-webhook-catcher.py  saas-bootstrap.sh  smtp-catcher.py  split_routes.py  start-plutus-homelab.sh  start-plutus-saas.sh  (+28 more)
static/: plutus.css
templates/: base.html  client_order.html  index.html  run.html  run_edit.html  saas_admin_tenant.html  saas_billing.html  saas_catalog.html  saas_claim_invite.html  saas_dashboard.html  saas_invite_welcome.html  saas_landing.html  saas_login.html  saas_mise.html  saas_order.html  saas_sell.html  saas_signup.html  saas_signup_pending.html  saas_signup_welcome.html  saas_upload.html  saas_verify_email.html  store_landing.html  store_offer.html  store_order.html  trust_privacy.html  trust_terms.html
tests/: conftest.py  test_billing_stripe.py  test_billing_ui.py  test_bundle_editor.py  test_catalog.py  test_client_order.py  test_client_paid_email.py  test_db_postgres.py  test_gallery_media_resolve.py  test_healthz_contract.py  test_homelab_money.py  test_idempotency.py  test_integrations.py  test_lab_notifications.py  test_lab_whcc.py  test_mise_callback.py  test_mise_gallery.py  test_mise_hook.py  test_mise_saas_ui.py  test_mnemosyne_crosssell.py  test_money_guardrail.py  test_money_path_hardening.py  test_no_money_surface.py  test_offer_contract.py  test_operational_contract.py  test_order_ops.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_pitch.py  test_rate_limit_client_ip.py  test_recommend.py  test_saas.py  test_saas_sell.py  test_saas_startup_hardening.py  test_service_tokens.py  test_signup_verify.py  (+12 more)
(+13 files in other folders)
