[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "plutus"
version = "0.1.0"
description = "Print and album upsell recommendations for Mise gallery admin."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "jinja2>=3.1,<4.0",
  "pillow>=10.4,<12.0",
  "python-dotenv>=1.0,<2.0",
  "python-multipart>=0.0.20,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0",
  "ruff>=0.6,<1.0",
]
s3 = [
  "boto3>=1.35,<2.0",
]
postgres = [
  "psycopg[binary]>=3.2,<4.0",
]
redis = [
  "redis>=5.0,<6.0",
]
saas = [
  "redis>=5.0,<6.0",
  "psycopg[binary]>=3.2,<4.0",
  "boto3>=1.35,<2.0",
]

[project.scripts]
plutus-api = "app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--ignore=tests/test_billing_stripe.py",
  "--ignore=tests/test_billing_ui.py",
  "--ignore=tests/test_client_order.py",
  "--ignore=tests/test_client_paid_email.py",
  "--ignore=tests/test_homelab_money.py",
  "--ignore=tests/test_integrations.py",
  "--ignore=tests/test_lab_notifications.py",
  "--ignore=tests/test_lab_whcc.py",

  "--ignore=tests/test_mise_saas_ui.py",
  "--ignore=tests/test_mnemosyne_crosssell.py",
  "--ignore=tests/test_money_path_hardening.py",
  "--ignore=tests/test_order_ops.py",
  "--ignore=tests/test_phase3.py",
  "--ignore=tests/test_phase4.py",
  "--ignore=tests/test_phase5.py",
  "--ignore=tests/test_phase7.py",
  "--ignore=tests/test_phase8.py",
  "--ignore=tests/test_saas_sell.py",
  "--ignore=tests/test_saas_startup_hardening.py",
  "--ignore=tests/test_signup_verify.py",
  "--ignore=tests/test_smtp_notifications.py",
  "--ignore=tests/test_stripe_sandbox.py",
  "--ignore=tests/test_tenant_invite.py",
  "--ignore=tests/test_tenant_settings.py",
  "--ignore=tests/test_tier10_hardening.py",
  "--ignore=tests/test_tier13_hardening.py",
  "--ignore=tests/test_trust_pages.py",
  "--ignore=tests/test_upload_streaming.py",
  "--ignore=tests/test_upload_worker_idempotent.py",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]