[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "plutus"
version = "0.1.0"
description = "Print and album upsell recommendations for Mise gallery admin."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "jinja2>=3.1,<4.0",
  "pillow>=10.4,<12.0",
  "python-dotenv>=1.0,<2.0",
  "python-multipart>=0.0.20,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0",
  "ruff>=0.6,<1.0",
]
postgres = [
  "psycopg[binary]>=3.2,<4.0",
]

[project.scripts]
plutus-api = "app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# No ignore-list: the SaaS/money test files were removed with their modules.
# The full studio test suite runs in CI.

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]